k8s-manifests/overlays/dev/frontend-ui/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ui-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production

spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - gcp.kapilkumaria.com
      secretName: gcp-frontend-tls
  rules:
    - host: gcp.kapilkumaria.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: frontend-ui
                port:
                  number: 80
